--- a/index.html
+++ b/index.html
@@ -1,10 +1,190 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>TEST</title>
+  <meta charset="UTF-8" />
+  <title>Control Inteligente de Pérdidas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    * { box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
+    body {
+      margin: 0;
+      background: #0f172a;
+      color: #e5e7eb;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      padding: 16px 24px;
+      background: #020617;
+      border-bottom: 1px solid #1e293b;
+    }
+    header h1 { margin: 0; font-size: 22px; }
+    main {
+      flex: 1;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+    .controls {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    select, button {
+      padding: 10px;
+      background: #020617;
+      color: #e5e7eb;
+      border: 1px solid #334155;
+      border-radius: 6px;
+    }
+    button { cursor: pointer; }
+    button:hover { background: #1e293b; }
+    .report-box {
+      flex: 1;
+      background: #020617;
+      border: 1px solid #1e293b;
+      border-radius: 8px;
+      padding: 16px;
+      overflow-y: auto;
+    }
+    .alert-red {
+      background: #7f1d1d;
+      color: #fecaca;
+      padding: 10px;
+      border-radius: 6px;
+      margin-bottom: 8px;
+    }
+    .alert-yellow {
+      background: #92400e;
+      color: #fef3c7;
+      padding: 10px;
+      border-radius: 6px;
+      margin-bottom: 8px;
+    }
+    .ok { color: #86efac; }
+    footer {
+      padding: 10px;
+      text-align: center;
+      font-size: 12px;
+      color: #64748b;
+      border-top: 1px solid #1e293b;
+    }
+  </style>
 </head>
-<body style="background:black;color:white;font-size:30px">
-  FUNCIONA NETLIFY
+
+<body>
+<header>
+  <h1>Control Inteligente de Pérdidas – RAG & Donaciones</h1>
+</header>
+
+<main>
+  <div class="controls">
+    <select id="periodo">
+      <option value="">Reporte por período</option>
+      <option value="7">Últimos 7 días</option>
+      <option value="14">Últimos 14 días</option>
+      <option value="30">Últimos 30 días</option>
+      <option value="60">Últimos 60 días</option>
+      <option value="90">Últimos 90 días</option>
+      <option value="180">Últimos 6 meses</option>
+    </select>
+
+    <select id="sectorToggle" onchange="toggleSector()">
+      <option value="all">Sucursal completa</option>
+      <option value="one">Un sector</option>
+    </select>
+
+    <select id="sector" disabled>
+      <option value="">Seleccionar sector</option>
+      <option>Carnicería</option>
+      <option>Verdulería</option>
+      <option>Lácteos y Fiambres</option>
+      <option>Congelados</option>
+      <option>Panadería</option>
+      <option>Almacén</option>
+      <option>Bebidas</option>
+      <option>Limpieza</option>
+      <option>Perfumería</option>
+      <option>No Comestibles</option>
+      <option>Textil</option>
+    </select>
+
+    <button onclick="generarReporte()">Generar reporte</button>
+  </div>
+
+  <div class="report-box" id="resultado">
+    <p class="ok">Esperando selección de reporte.</p>
+  </div>
+</main>
+
+<footer>
+  Conectado a Google Sheets en tiempo real
+</footer>
+
+<script>
+const URL_GOOGLE_SCRIPT =
+  "https://script.google.com/macros/s/AKfycby4QCiHE9BI496qmBwY7-ZnCFKUSkV1UPBXegu8xAnq18s4kFfgIBLCVaZtum585K6IUQ/exec";
+
+function toggleSector() {
+  const toggle = document.getElementById("sectorToggle").value;
+  document.getElementById("sector").disabled = toggle !== "one";
+}
+
+async function generarReporte() {
+  const periodo = document.getElementById("periodo").value;
+  const sectorToggle = document.getElementById("sectorToggle").value;
+  const sector = document.getElementById("sector").value;
+  const box = document.getElementById("resultado");
+
+  box.innerHTML = "";
+
+  if (!periodo) {
+    box.innerHTML = `<div class="alert-yellow">Seleccioná un período.</div>`;
+    return;
+  }
+  if (sectorToggle === "one" && !sector) {
+    box.innerHTML = `<div class="alert-yellow">Seleccioná un sector.</div>`;
+    return;
+  }
+
+  box.innerHTML = "<p>Cargando datos reales…</p>";
+
+  try {
+    const params = new URLSearchParams({
+      dias: periodo,
+      sector: sectorToggle === "one" ? sector : "ALL"
+    });
+
+    const res = await fetch(`${URL_GOOGLE_SCRIPT}?${params}`);
+    const data = await res.json();
+
+    box.innerHTML = `
+      <p>📊 Reporte últimos <strong>${periodo} días</strong></p>
+      <p>📍 Sector: <strong>${sectorToggle === "one" ? sector : "Toda la sucursal"}</strong></p>
+    `;
+
+    if (data.alertas?.length) {
+      data.alertas.forEach(a => {
+        box.innerHTML += `<div class="alert-red">🔴 ${a}</div>`;
+      });
+    }
+
+    if (data.advertencias?.length) {
+      data.advertencias.forEach(a => {
+        box.innerHTML += `<div class="alert-yellow">🟡 ${a}</div>`;
+      });
+    }
+
+    box.innerHTML += `<p class="ok">✔ Reporte generado con datos reales.</p>`;
+
+  } catch (err) {
+    box.innerHTML = `<div class="alert-red">Error al obtener datos: ${err.message}</div>`;
+  }
+}
+</script>
 </body>
 </html>
